integrates\fix(front): #2358.5 fix z-index problem
- Parent element of the select menu was limiting its z-index to 4.


Former-commit-id: 8944617061b377183b23dcfae4befe113bf7eddf

--- a/front/src/scenes/Dashboard/components/ContentTab/index.css
+++ b/front/src/scenes/Dashboard/components/ContentTab/index.css
@@ -47,7 +47,7 @@
     padding-top: 8px;
     position: sticky;
     top: 45px;
-    z-index: 3;
+    z-index: 4;
   }
 }
 
