--- a/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -91,6 +91,6 @@
     margin-left: 210px;
     position: sticky;
     top: 0px;
-    z-index: 4;
+    z-index: 5;
   }
 }
