--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -189,7 +189,7 @@ label {
     padding-top: 2px;
     position: sticky;
     top: 45px;
-    z-index: 3;
+    z-index: 4;
   }
 }
 
